issue #9549: Feature request: Allow to disable Webkit scrollbar styling

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -1,20 +1,6 @@
 body {
     background-color: var(--page-background-color);
     color: var(--page-foreground-color);
-    scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-background-color);
-}
-
-::-webkit-scrollbar {
-        background-color: var(--scrollbar-background-color);
-	height: 10px;
-        width: 10px;
-}
-::-webkit-scrollbar-thumb {
-        background-color: var(--scrollbar-thumb-color);
-        border-radius: 8px;
-}
-::-webkit-scrollbar-corner {
-        background-color: var(--scrollbar-background-color);
 }
 
 body, table, div, p, dl {
